Added New/Search Transactions forms

--- a/CMPT291-Project/TransNew.resx
+++ b/CMPT291-Project/TransNew.resx
@@ -58,184 +58,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="SearchBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IgAALiIBquLdkgAAABt0RVh0U29mdHdhcmUAQ2Vsc3lzIFN0dWRpbyBUb29swafhfAAAJ99JREFUeF7t
-        3b2LbNeVsPFK7cmUSMw40YtAEygYeBlkGARCkbg23JEDB8aRXkUOjD+wMwUCIRjZgcHZRMaJHBhNMoMi
-        57ITGweDwTgx/jusd6+urtvVVc/qW919PvZe5znws3S3e1WfU9X3PKrq+th98cUXmkHbXmy+2nyz+UHz
-        0+aXzWfNb5s//eP/+b9/P/GFJA3i1vkrzmnX57Y4x8W5Ls55ce6Lc2CcC1+kc6Wmg4u6XNteat5uftT8
-        ovn8+gec/gJI0pZF+D+/PlfGOTPOnS/RuVX3h4vKte315nvNJ82f4QdWknQPcS69PqfGufV1Ovfq+XBR
-        N9r2WvPd5tP2g+c9b0maX9yT//T63PsanZt1Dhe3rm1vNT9p/gg/aJKkBcW5+Pqc/Bads7WHi1vUtjeb
-        nzV/oR8oSdL64hx9fa5+k87lW4aLW9G2V5v3mz/QD44kqV9x7r4+h79K5/itwcXq2vaN5tf0AyJJGk+c
-        0+PcTuf8rcDFitr2QvP95vf0wyBJGl+c46/P9S9QCyrDxUra9nLzYbuhfYa6JG1HPFP+w2gAtaEiXKyg
-        ba80H8eNenIjS5K2I8L+cTSBWlEJLo6sbV9pPoob8eRGlSRtV4T9o2gEtaMCXBxR277U/Lj5K9yQkiRF
-        LP563YovUUtGhoujadu3m9/RjSdJ0qloRrSDmjIqXBxF2+J91X9FN5YkSc8TDYmWUGNGg4u9a1s8vP5+
-        uzH8Pbkk6bHi9+vxBjVDPwyPiz1rW3zc3m/gBpEk6cGiLdEYas8IcLFHbfty80G70r1XLkmaS9xb/yCa
-        Qy3qGS72pm1vNP8DV7wkSZOL5kR7qEm9wsWetO07zd/oCpckaS7RnmgQtalHuNiDtr3U/JyuZEmSlhIt
-        iiZRq3qCi2tr2781n9EVK0nS0qJJ0SZqVi9wcU1t+1bzv3SFSpK0lmhTNIra1QNcXEvbftiuNJ/FLknq
-        VTwL/ofUsLXh4tLa9g/Nf8AVJ0lSd6JZ0S5q2lpwcUlt+6fmP+kKkySpV9GuaBi1bQ24uJS2/XPzCV1R
-        kiT1LhoWLaPGLQ0Xl9C2f2n+i64gSZJGES2LplHrloSLc2vbvzb/TVeMJEmjiaZF26h5S8HFOV3H3Ldx
-        lSSVEm1bM+q4OJe2xcPs3jOXJJUUjYvWUQPnhotzaFs8Ac7fmUuSSovWRfOohXPCxam1LV6a5rPZJUmb
-        EM2L9lET54KLU2pbvGmMrzOXJG1KtC8aSG2cAy5OqW2+A5wkaZOigdTGOeDiVNoW782OBylJ0hZEC6mR
-        U8PFKbTtW+1A/KAVSdLWxQe6zP4pbbj4WG2LzzP3I1AlSWqiidFGauZUcPEx2vZS8xkdkCRJWxVtjEZS
-        O6eAi4/Rtp/TgUiStHXRSGrnFHDxodr2HToASZK0F62khj4WLj5E295o/kY7L0mS9qKV0Uxq6WPg4n21
-        7cuNH7giSdIFopnRTmrqQ+HifbXtA9phSZLEop3U1IfCxfto29ttx3y9uSRJ9xOvT3+b2voQuHiptn2p
-        +Q3spCRJeo5oaLSUGntfuHiptr1POyhJki4TLaXG3hcuXqJtr7cd8aF2SZIeJx56f51aex+4eIm2/Qp2
-        SpIk3VM0lVp7H7j4PG37Nu2QJEl6mGgrNfdSuHiXtsUT4X5HOyNJkh4m2hqNpfZeAhfv0rYf045IkqTH
-        icZSey+Bi5m2faX5K+2EJEl6nGhstJYa/Dy4mGnbR7QDkiRpGtFaavDz4CJp2yvtG/kyNUmS5hUvY3uF
-        WnwXXCRt+xi+qSRJmlg0l1p8F1w81baX2zfw3vl2xG0taWz0d1vjiHvpL1OTM7h4qm0fwjdTXXRykDQW
-        +rutgUR7qckZXDzWthfaBfvDsS2nJwZJ46G/2xpL3Et/gdpMcPFY274P30S10clB0ljo77YGEw2mNhNc
-        PNa239M3UWl0cpA0Fvq7rcFEg6nNBBcP2vYN+gYqj04OksZCf7c1oGgxNfoULh607dd04SqPTg6SxkJ/
-        tzWgaDE1+hQuhra9ShesTaCTg6Sx0N9tDSqaTK0+houhbe/ThWoT6OQgaSz0d1uDiiZTq4/hYmjbH+hC
-        tQl0cpA0Fvq7rUFFk6nVx3hxt3uTLlCbQScHSWOhv9saWLSZmn3Ai7vdz+jCtBl0cpA0Fvq7rYFFm6nZ
-        B7y42/2FLkybQScHSWOhv9saWLSZmn1wvrDbvUUXpE2hk4OksdDfbQ0uGn3a7YPzhd3uJ3QhkqTVUbgz
-        NK/BRaNPu31wvrDb/ZEuRJK0Ogp3huY1uGj0abcPbv9ht3uNLkCS1AUKd4bmVUC0+rjdzxp+6w+73Xdp
-        WJLUBQp3huZVQLT6uN3PGn7rD7vdpzQsSeoChTtD8yogWn3c7mcNP/5D+0J/CCSpX6fRvgvNq4a/H7f7
-        4OZfdrvXYUiS1A8Kd4bmVUQ0+zjmVx1/9i+73fdoSJLUDQp3huZVRDT7OOZXHX/2L7vdJzQkSeoGhTtD
-        8yoimn0c86uOP/uX3e7PNCRJ6gaFO0PzKiKafRzzq45fx/wlGpAkdYXCnaF5FRLtpqC/TV8sSeoKhTtD
-        8yok2k1B/xF9saT1fe3f/x/6+r+/1/55CZ5/LNpXzY7CnaF5FRLtpqD/gr5Y0jqePH33i6+/c4jx7UDf
-        hPw8so8Rl3sm9uEpf/0B7b9mQ+HO0LwKiXZT0D+nL5a0jNOQzhHsx7i1f8/+Q4PR8WkyFO4MzauQaPdZ
-        0Nv/4Y0vLSjCtw9jf/G+zPG+H/4j5PbX0HHr0U6jfReaVy233jEuthfhiyRNiIJXXzvmo4fr6XrRvVG4
-        MzSvYqLhx0H/Kn2RpMe7HTgFup50MQp3huZVTDT8OOjfpC+SdH9P2j3ScBOwLd4zv4sPzT8ShTtD8yom
-        Gn4c9B/QF0m63E2gIlgHt8OlY+fXE12vOkPhztC8iomGHwf9p/RFki4T98hvnuB2Gi493/6Z83E90vWr
-        WyjcGZpXMdHw46D/kr5I0t0iRoZ8SrdfFkfXuTDcGZpXMdHw46B/Rl8kie2fsW7E53aIO90GG0bhztC8
-        iomGHwf9t/RFkm4cAnMaHS3jcN3TbbMxFO4MzauYaPhx0P9EXyTJl531im6rjaBwZ2hexUTDnwW9LXjD
-        S+AmIN4z78fNbbHRJ9GdRvsuNK96nr1bnEGXTlA81JvbbzdLt2NRp9G+C82rHoMuEV+CNprNPSv+NNp3
-        oXnVY9ClUzcxp3CoZxt60txptO9C86rnVtDpC6TNuAqCIS9hH/bSL3WjcGdoXgUZdKmhKKiCslGncGdo
-        XgUZdG0eh0DV0G0/MAp3huZVkEHXZl2d6J/Gyd6H2esr97t1CneG5lWQQdcmxcn98HvW2yd+1VUq6hTu
-        DM2rIIOuzYmT+vFrl7UlZaJO4c7QvAoy6NqU45O6tiv+g45+PgZC4c7QvAoy6NoMQ65jg0edwp2heRVk
-        0LUJxlwZ+nkZAIU7Q/MqyKCrPDqJS8fo56ZzFO4Mzasgg67S9ids753reYZ7+J3CnaF5FWTQVVacqH02
-        uy43VNQp3BmaV0EGXSXFCdqY6yHo56lDFO4Mzasgg65y9idmY66HGuKeOoU7Q/MqyKCrFEOuKcSn7tHP
-        V0co3BmaV0EGXWUYc02p89epU7gzNK+CDLpKoBOy9HjdRp3CnaF5FWTQNbzDiff8ZCw91v7nin7uVkbh
-        ztC8CjLoGl78vvP8RCxNI36+njx9F3/2VkThztC8CjLoGtoTP8/8SFwP90GXoQz9/K2Iwp2heRVk0DWs
-        OMlu97Xmx8e9//e4F3mz9hCHyzT25/bXCf0croTCnaF5FWTQNaTjk+wmxSMTB9d/puvpUmeXe/izTnTz
-        JDkKd4bmVZBB15D4ZLsFywWFv7/ouloBhTtD8yrIoGs4dJKt7PCkP7oulnKzHwe8r1tB19HCKNwZmldB
-        Bl1D2T8JbgvWj/hdYv8i8Nt8DkMXtw2FO0PzKsigayhbeIlaHCMde6/id+439975mCqi62JBFO4Mzasg
-        g65h1H+y1j6KdOwjiGPY32PfQtj3x0jXw0Io3BmaV0EGXUOIk2fde+erx2FS77zzzsnx1XT4eaTrYAEU
-        7gzNqyCDru4dnzyrouMeHR1nLQZdfTHo6t7xybOSzj/NaxJbedIcHfvMKNwZmldBBl1do5Pn+PbPEKfj
-        rcpfl0yOwp2heRVk0NW18xPoyFZ9iHZ1EfXK99jpmGdE4c7QvAoy6OoWnTTHtL9HHv9Ox7k1h+vk9nU0
-        slVuWwp3huZVkEFXt45PlqOKe6TxZjh0fFu2v34KRX3525jCnaF5FWTQ1S08cQ7Fe+V3Ob6OKqBjnBGF
-        O0PzKsigq0tVTvR0bLpR6l56OxY6xplQuDM0r4IMurrEJ8yx0HHpXKUnytHxzYTCnaF5FWTQ1R06UY7D
-        h9kfwqjfG4U7Q/MqyKCrO6Oe3A/7Tcek56vw8Hv8DNCxzYDCnaF5FWTQ1ZVRP4DFl6VNY399jhx2g671
-        GHR1ZcR3FPOe+bROr9+xLPazQOHO0LwKMujqxvEJcRzGfGpxfY7+O3U6rolRuDM0r4IMurox6vt907Ho
-        ceh6HsVCv0encGdoXgUZdHVhfzIcL+h0LJrGqPfSDbrWYtDVhcOJ8PTk2K9F30Rkkw7X8/l13zeDrrUY
-        dHWBToz92keGjkPTOr/ux0HHMyEKd4bmVZBB1+ri5DfKvfPDftJxaHqn1/8o4vkgdDwTonBnaF4FGXSt
-        bn8SHOehVToGzWesX8XsLfAffhTuDM2rIIOu1e1Pgv2ftBe41yUQHz9Lt0fPDLrWYNC1uv1JcIR7YQZ9
-        LXx79Mugaw0GXavbnwR7D7oxXxPfJv2jY5kIhTtD8yrIoGt1+5Nf30H34fb17d/nf4RHcm7QcUyEwp2h
-        eRVk0LW6/cmv/xM17buW8+Tpu+12MOjXKNwZmldBBl2roxNhT7x33oer22KwoMcT+uhYJkDhztC8CjLo
-        Wh2dCHtD+63l0W3Tr/1/fNBxTIDCnaF5FWTQtbrzE2FfaJ+1Drp9+mXQtSyDrtXtX2fc70OptM9azzgP
-        uxt0Lcuga3UGXfdh0K9QuDM0r4IMulbXZ9Dfm/MJTXqEw+1zfpv1xqBrWQZdq4uTXn/3umY9GeuRxriX
-        btC1LIOuLpyfDNd1CAbtq9Zn0DHcGZpXQQZdXYgTX28nadpP9cGgY7gzNK+CDLq6cX5CXEe8kUz8k/ZR
-        fTDoGO4Mzasgg65uHJ8E1+U7w/XOoGO4MzSvggy6urL2idq3eR2DQcdwZ2heBRl0dSVOgOudrI35KA63
-        1/lt2BODrmUZdHXn+GS4JNoX9cugX4zmVZBBV5fOT47ziUcEaB/Ut/6Dvkf7PgEKd4bmVZBBV7fo5Dit
-        We9BaWYG/WI0r4IMurp2c2Kc+uRtzEdn0C9G8yrIoKt7dJKcAn0vjaP/oM/6H40U7gzNqyCDrmEcnyQf
-        yt+X12HQL0bzKsiga0hxoty/o9vzHV4GR5ejce1vXwppL2b9uaNwZ2heBRl0SUMy6BejeRVk0CUNyaBf
-        jOZVkEGXNCSDfjGaV0EGXdJwjoPZL4OuZRl0ScM5fMRt32Z9RQWFO0PzKsigSxrOKJ+2Rvs+EQp3huZV
-        kEGXNJwRgv7k6WwPtwcKd4bmVZBBlzSc3oO+wHsfULgzNK+CDLqk4Rh0DHeG5lWQQZc0HIOO4c7QvAoy
-        6JKGchrPHhl0rcGgSxpK7/fOQ+wj7fuEKNwZmldBBl3SUIYI+jsGXcsz6JKG0n/QF/mIXgp3huZVkEGX
-        NAwOaF8WeLg9ULgzNK+CDLqkYVBAe2PQtRaDLmkIh1ieBrQ3C/z+PFC4MzSvggy6pCHEW6n2/wlre7T/
-        E6NwZ2heBRl0SUP42hBBX+TeeaBwZ2heBRl0Sd3bx3wEBl3rMeiSusfx7M9Cvz8PFO4Mzasggy6paxTO
-        XtH+z4TCnaF5FWTQJXUt7vVSPHtE+z8TCneG5lWQQZfUNQpnnxZ7uD1QuDM0r4IMuqRujXTvPF5WR8cw
-        Ewp3huZVkEGX1K1RXncez8Kn/Z8RhTtD8yrIoEvq0jAxv95POoYZUbgzNK+CDLqkLo3xcPt7Sz/UfkDh
-        ztC8CjLokrrD8exP/EeHQVcvDLqkrlyFcoiH29s+rhPzQOHO0LwKMuiSuhGhHCPm+3vn8U86jgVQuDM0
-        r4IMuqRujPEBLDfoGBZC4c7QvAoy6JK6QMHsVTyKQMewIAp3huZVkEGXtDqKZs/i4XY6jgVRuDM0r4IM
-        uqTVjfQwe+wrHcPCKNwZmldBBl3Sqsb5rPMbdBwLo3BnaF4FGXRJq4nXcI/0fu0HdCwLo3BnaF4FGXRJ
-        q6BQ9q+Lh9sDhTtD8yrIoEtaxSGQ59Hs10rvCkco3BmaV0EGXdLiIo6jvIHMQUcxDxTuDM2rIIMuaVEU
-        y76t9n7td6FwZ2heBRl0SYviaPZrxQ9guQuFO0PzKsigS1oMBbNvXcY8ULgzNK+CDLqkRXAw+7byB7Dc
-        hcKdoXkVZNAlze4qjoM9Ce7wDHw6ng5QuDM0r4IMuqRZRRRHfPOYQMfTCQp3huZVkEGXNJuI4nj3zEM3
-        byCToXBnaF4FGXRJsziE8TyW/evg09Seh8KdoXkVZNAlzYJCOYIOPuv8EhTuDM2rIIMuaXL7OPokuBlR
-        uDM0r4IMuqRJjfowe6Dj6RSFO0PzKsigS5rMqM9mj4fZ33nnHTymTlG4MzSvggy6pEmMGvMDOqaOUbgz
-        NK+CDLqkR9tHcdx753RMnaNwZ2heBRl0SY/my9MWR+HO0LwKMuiSHoVCOYLDrwjomAZA4c7QvAoy6JIe
-        bB/HcX93Tsc0CAp3huZVkEGX9CD7KI4a82Efaj+gcGdoXgUZdEn3NvK98gM6roFQuDM0r4IMuqR7MeZd
-        oHBnaF4FGXRJF6M4jmPoJ8GdonBnaF4FGXRJFzkP5DgGf0Y7oXBnaF4FGXRJz/W1pxzKERSMeaBwZ2he
-        BRl0SXc6DeRI4l3g4p90XIOjcGdoXgUZdEmpfRhHfRJc2ZgHCneG5lWQQZeEfDZ71yjcGZpXQQZd0i0R
-        wsND1WNq+/60dMwDhTtD8yrIoEt6ZuyQH7z3xRODfozmVZBBl3SF4ziW+A+SDcQ8ULgzNK+CDLokjONo
-        4uVpG4l5oHBnaF4FGXRp4/ZBHPuh9o3FPFC4MzSvggy6tGEVfme+oYfZj1G4MzSvggy6tFGHd1Ab3QZj
-        HijcGZpXQQZd2iBjPjwKd4bmVZBBlzbGl6aVQOHO0LwKMujShnAcx7LBJ8ARCneG5lWQQZc2guI4ksOv
-        CejYNojCnaF5FWTQpQ3YR3Hch9r3z2R/F49toyjcGZpXQQZdKm7835l7zxxQuDM0r4IMulRYlWez07Ft
-        HIU7Q/MqyKBLRRnz0ijcGZpXQQZdKsiH2cujcGdoXgUZdKmY8ziOxWezX4TCnaF5FWTQpUJO4zgaY34x
-        CneG5lWQQZeKOI3jaIz5vVC4MzSvggy6VIC/M98cCneG5lWQQZcG57PZN4nCnaF5FWTQpcGN/A5wB3Rc
-        uhOFO0PzKsigSwMb/e1c4590XHouCneG5lWQQZcGNXTMfQLcY1G4MzSvggy6NKB9GMcMujGfBIU7Q/Mq
-        yKBLg9mHcdCY+zD7VCjcGZpXQQZdGsg+5GPG/LDfdFy6Nwp3huZVkEGXBjH+a82N+YQo3BmaV0EGXRpA
-        hdea03HpwSjcGZpXQQZdGoC/M9cJCneG5lWQQZc6dxrJUfhs9llRuDM0r4IMutSxfRzHu3duzGdH4c7Q
-        vAoy6FKnrsI4Ysx9mH0JFO4Mzasggy516GtPx4y5L01bDIU7Q/MqyKBLHToP5TjoeDQ5CneG5lWQQZc6
-        sw/jiPfOjfmCKNwZmldBBl3qCEWyd/7OfBUU7gzNqyCDLnXiNJQj8Nnsq6FwZ2heBRl0qROjvRucMV8V
-        hTtD8yrIoEsdePKUo9k7OhYtgsKdoXkVZNCllb3xxhsYy57F783pWLQYCneG5lWQQZdW9uTpuy2SYz3c
-        Ho8o0LFoMRTuDM2rIIMurSjiONobyBjzLlC4MzSvggy6tJJ9IEeK+XvGvB8U7gzNqyCDLq1kpIfa4xnt
-        xrwrFO4Mzasggy6tgKLZr4j5u3gcWg2FO0PzKsigSys4hPI8nn2iY9CqKNwZmldBBl1aAUWzR1dP2POh
-        9h5RuDM0r4IMurSw0Z7VTseg1VG4MzSvggy6tDCKZq9o/9UFCneG5lWQQZcWNNrL1OgY1AUKd4bmVZBB
-        lxbC0ezR/j866BjUDQp3huZVkEGXFnIezh75JLhBULgzNK+CDLq0EA5oX3xW+zAo3BmaV0EGXVpARLL/
-        35/7UPtAKNwZmldBBl2aWUQy3jr1djz7RPuvLlG4MzSvggy6NLN9LPsOup9vPhwKd4bmVZBBl2a0D2b/
-        987jEQTaf3WLwp2heRVk0KUZxSeUjfC7c9p3dY3CnaF5FWTQpRmN8BGp3jsfEoU7Q/MqyKBLM6KA9oj2
-        XV2jcGdoXgUZdGkm+1j6cLtmQeHO0LwKMujSTDigfYnf8dO+q3sU7gzNqyCDLs2EAtob2m8NgcKdoXkV
-        ZNClGVA8e0T7riFQuDM0r4IMujSDEX53Hv+kfdcQKNwZmldBBl2awXlAe9Ji7u/OR0fhztC8CjLo0gw4
-        pL3w3nkBFO4Mzasggy7N4DyiPfGlagVQuDM0r4IMujQDDmkvDHoBFO4Mzasggy5NbISPSqX91lAo3Bma
-        V0EGXZpYfBQpRbQHfkxqGRTuDM2rIIMuTcygawEU7gzNqyCDLk3MoGsBFO4Mzasggy5NzKBrARTuDM2r
-        IIMuTcygawEU7gzNqyCDLk3MoGsBFO4Mzasggy5NrOeg+xr0MijcGZpXQQZdmli/QX/vizfeeAP3WcOh
-        cGdoXgUZdGlivQbdh9tLoXBnaF4FGXRpYgZdC6BwZ2heBRl0aWIGXQugcGdoXgUZdGliBl0LoHBnaF4F
-        GXRpYgZdC6BwZ2heBRl0aWIGXQugcGdoXgUZdGliBl0LoHBnaF4FGXRpYgZdC6BwZ2heBRl0aWIGXQug
-        cGdoXgUZdGliBl0LoHBnaF4FGXRpYgZdC6BwZ2heBRl0aWIGXQugcGdoXgUZdGliBl0LoHBnaF4FGXRp
-        YgZdC6BwZ2heBRl0aWIGXQugcGdoXgUZdGliBl0LoHBnaF4FGXRpYgZdC6BwZ2heBRl0aWIGXQugcGdo
-        XgUZdGliBl0LoHBnaF4FGXRpYgZdC6BwZ2heBRl0aWIGXQugcGdoXgUZdGliBl0LoHBnaF4FGXRpYgZd
-        C6BwZ2heBRl0aWIGXQugcGdoXgUZdGli3Qb9HYNeCIU7Q/MqyKBLE+s16IH2V0OicGdoXgUZdGlifQbd
-        e+fFULgzNK+CDLo0sXhom6O6JoNeDIU7Q/MqyKBLM+Corsffn5dD4c7QvAoy6NIMeruXTvuooVG4MzSv
-        ggy6NAOK6nq8d14QhTtD8yrIoEszOcT0PLDLo/3T0CjcGZpXQQZdmgmFdQ20bxoehTtD8yrIoEsz2kd1
-        jXvp++9J+6QSKNwZmldBBl2aWYR16SfJxWvhnzw16IVRuDM0r4IMurSAq8guEvX99zDm5VG4MzSvggy6
-        tJAI7ZxRP1w2fW+VQ+HO0LwKMujSgq7C2+5FT/n2sPvLMuYbQ+HO0LwKMujSwm4H+SbG93d7jr6XyqJw
-        Z2heBRl0aSWHEMfvu4/DfB90udoECneG5lWQQZc6cfk9dd/5TRjuDM2rIIMuSeOhcGdoXgUZdEkaD4U7
-        Q/MqyKBL0ngo3BmaV0EGXZLGQ+HO0LwKMuiSNB4Kd4bmVZBBl6TxULgzNK+CDLokjYfCnaF5FWTQJWk8
-        FO4Mzasggy5J46FwZ2heBRl0SRoPhTtD8yrIoEvSeCjcGZpXQQZdksZD4c7QvAoy6JI0Hgp3huZVkEGX
-        pPFQuDM0r4IMuiSNh8KdoXkVZNClzsRnnj95+u7JZ6CzJ0/3/6TLUWkU7gzNqyCDLnXgNNRf//f32j+f
-        b/91t2fp8lUOhTtD8yrIoEsri3vjX39nH2cK9CUOs3E58Wf6PiqFwp2heRVk0KWV3AT5YRHP3VwefV+V
-        QOHO0LwKMujSwvb3wqeOOPHeemEU7gzNqyCDLi3ooQ+pP957uD8aFoU7Q/MqyKBLC+HQLov2S0OicGdo
-        XgUZdGkB+6Cude/8wIfgC6FwZ2heBRl0aWbHMV3b4SF/2k8NhcKdoXkVZNClGe1D2kfMD4x6CRTuDM2r
-        IIMuzWQf8r5ifsOoD47CnaF5FWTQpZmcR7Q/tN8aAoU7Q/MqyKBLM6B49or2X92jcGdoXgUZdGliFM3e
-        0XGoaxTuDM2rIIMuTezwfuqjiP2l41DXKNwZmldBBl2a0OHjTEcT+03Ho25RuDM0r4IMujQhiuUo6HjU
-        LQp3huZVkEGXJrTee7U/Tuw3HY+6ReHO0LwKMujShAy6FkLhztC8CjLo0kT2cRwz6L7RzHAo3BmaV0EG
-        XZrIeSRHYtAHQ+HO0LwKMujSBCKGoz7cfoyOTV2icGdoXgUZdGkCEcPRg354/Twdn7pD4c7QvAoy6NIE
-        roI4etB92H0kFO4Mzasggy5N4DiIozLoQ6FwZ2heBRl0aQLHQRyVQR8KhTtD8yroOOje8NIDHQdxVAZ9
-        KKfRvgvNq56/G3RpAsdBHJVBH8pptO9C86rHoEtTOA7iqAz6UE6jfReaVz0GXZrCcRBHZdCHchrtu9C8
-        6rkJetv+BF8g6QJXQRzsc9BP+Tr0oVC4MzSvYqLhx0H/LX2RpMucBnJEdFzqEoU7Q/MqJhp+HPTP6Isk
-        XW7Uh91jv+l41C0Kd4bmVUw0/Djov6QvknQ5g66FULgzNK9iouHHQf8pfZGky436e/TYbzoedYvCnaF5
-        FRMNPw76D+iLJF1uH8jRou6T4QZE4c7QvIqJhh8H/Zv0RZLu5zyYffPe+ZAo3BmaVzHR8OOgf5W+SNL9
-        PHnK4ezVk6fv4nGoaxTuDM2rmGj4cdBfpC+SdH/jPOzuvfNBUbgzNK9iouHPgh7/0xa98aUJcDz7RPuv
-        7p1G+y40r1qevUvcs6C37XP4QkkPQPHsh0+EGxyFO0PzKiTaTUH/BX2xpIc5jmcvfM/2EijcGZpXIdFu
-        CvqP6IslPdxxRNdmzMugcGdoXoVEuynob9MXS3qc45iuxZiXQuHO0LwKiXZT0F+iL5b0eMdRXZ4xL4bC
-        naF5FRLtPgv6ddT/TAOSHu88tMuh/dGwKNwZmlcR0ezjmF91/Nm/7Haf0JCkaVBs50b7oaFRuDM0ryKi
-        2ccxv+r4s3/Z7b5HQ5Km9bWrd5Sb6yH4967esY6+r0qgcGdoXkVEs49jftXxZ/+y271OQ5Kmd3ib2P3v
-        1h8b9/du/Y6evp/KoHBnaF5FRLOPY37V8eM/tC/yh0BaQXxQSkT5YB95dvx1gS5PZZ1G+y40rxpuvUPc
-        we0/7HafwqCkBd2+981oTptA4c7QvAqIVh+3+1nDb/1ht/suDUuSukDhztC8CohWH7f7WcNv/WG3e42G
-        JUldoHBnaF4FRKuP2/2s4WcLu90f6QIkSaujcGdoXoOLRp92++B8Ybf7CV2IJGl1FO4MzWtw0ejTbh+c
-        L+x2b9GFSJJWR+HO0LwGF40+7fYBL+52f6ELkiStisKdoXkNLNpMzT7gxd3uZ3RhkqRVUbgzNK+BRZup
-        2Qe8uNu9SRcmSVoVhTtD8xpYtJmafYCLoW1/oAuUJK2Gwp2heQ0qmkytPoaLoW3v04VKklZD4c7QvAYV
-        TaZWH8PF0LZX6UIlSdKyosnU6mO4eNC2X9MFS5KkZUSLqdGncPGgbd+gC5ckScuIFlOjT+Hisbb9nr6B
-        JEmaVzSY2kxw8Vjbvk/fRJIkzSsaTG0muHisbS+0C/UZk5IkLevv0WBqM8HFU237EL6RJEmaSbSXmpzB
-        xVNte7lduPfSJUlaRtw7f5manMFF0raP4RtKkqSJRXOpxXfBRdK2V9o38V66JEnzinvnr1CL74KLmbZ9
-        BN9YkiRNJFpLDX4eXMy07SvNX2kHJEnS40Rjo7XU4OfBxbu07ce0E5Ik6XGisdTeS+DiXdr2peZ3tCOS
-        JOlhoq3RWGrvJXDxedr2bdoZSZL0MNFWau6lcPESbfsV7ZAkSbqfaCq19j5w8RJte73thC9jkyTpceJl
-        aq9Ta+8DFy/VtvdhxyRJ0oWipdTY+8LFS7UtniD3G9pBSZJ0t2hotJQae1+4eB9te7vtlA+9S5J0P/FQ
-        +9vU1ofAxftq2wewo5IkKRHtpKY+FC7eV9u+3PwP7bAkSbotmhntpKY+FC4+RNveaP5GOy5JkvaildFM
-        aulj4OJDte07tPOSJGkvWkkNfSxcfIy2/ZwOQJKkrYtGUjungIuP0baXms/oQCRJ2qpoYzSS2jkFXHys
-        tv1b8790QJIkbU00MdpIzZwKLk6hbd9qB+Hr0yVJWxevN/8WtXJKuDiVtv0QDkySpM2IFlIjp4aLU2rb
-        f9ABSpJUXTSQ2jgHXJxS2/6h+U86UEmSqor2RQOpjXPAxam17Z+aT+iAJUmqJpoX7aMmzgUX59C2f27+
-        iw5ckqQqonXRPGrhnHBxLm37l+a/6QqQJGl00bhoHTVwbrg4p7b9a+MHuUiSSom2ReOofUvAxbldR917
-        6pKkEqJpa8Y84OIS2hYPv/s7dUnS0KJl0TRq3ZJwcSltiyfK+ex3SdKQomHRMmrc0nBxSW2Ll7T5OnVJ
-        0lCiXdEwatsacHFpbYs3n/Ed5SRJQ4hmRbuoaWvBxbW0Ld773Q90kST1Kj5oZZH3Zr8vXFxT277V+NGr
-        kqSuRJuiUdSuHuDi2toWn6f+GV2hkiQtLZoUbaJm9QIXe9C2l5qf0xUrSdJSokXRJGpVT3CxJ237TvM3
-        upIlSZpLtCcaRG3qES72pm1vNL5drCRpEdGcaA81qVe42KO2fbn5oF3RPgtekjSXeBb7B9EcalHPcLFn
-        bXu7+Q3cCJIkPVi0JRpD7RkBLvaubV9q3m83gPfWJUmPFffK34+2UHNGgYujaNvrza/gxpEk6bmiIdES
-        asxocHE0bft28zu6sSRJOhXNiHZQU0aFiyNqWzwM/+Pmr3TjSZIUjbhuxdAPrxNcHFnbvtJ81G44f78u
-        STqI35N/FI2gdlSAixW07ZXm47gRT25USdJ2RMg/jiZQKyrBxUra9nLzYdyoJzeyJKmuCPmH0QBqQ0W4
-        WFHbXmi+3/webnhJUgFxjr8+179ALagMF6tr2zeaX9MPgyRpPHFOj3M7nfO3Ahe3om2vNvFmAn+gHxBJ
-        Ur/i3H19Dn+VzvFbg4tb1LY3m581f6EfHEnS+uIcfX2ufpPO5VuGi1vXtreanzR/pB8oSdJy4lx8fU5+
-        i87Z2sNF3Wjba813m0/bD5bPlJek+cUz1D+9Pve+RudmncNF5doW7x//veaT5s/wgyhJuoc4l16fU+Pc
-        WuJ91deAi7pc215q4iNdf9T8ovm8/YB6T16SzsU978+vz5Vxzoxz50t0btX94aIer20vNl9tvtn8oPlp
-        88vms+a3zZ/ih/sE/QWQpB7dOn/FOe363BbnuDjXxTkvzn1xDoxz4Yt0rtR0cFGSJI0FFyVJ0ki+2P1/
-        c7pxbW/WkK4AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="NewTransBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="AddCustBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IgAALiIBquLdkgAAABt0RVh0U29mdHdhcmUAQ2Vsc3lzIFN0dWRpbyBUb29swafhfAAAISRJREFUeF7t
